--- a/index.html
+++ b/index.html
@@ -15,20 +15,20 @@
 <body>
     <header>
         <nav>
-            <a class="header-logo" href="./index.html"><span class="accent">Web</span>Studio</a>
+            <a class="header-logo" href="./index.html">Web<span class="accent">Studio</span></a>
             <ul class="header-menu">
                 <li>
-                    <a class="header-menu-link" href="#">Studio</a>
+                    <a class="header-menu-link" href="./index.html">Studio</a>
                 </li>
                 <li>
-                    <a class="header-menu-link" href="#">Portfolio</a>
+                    <a class="header-menu-link" href="">Portfolio</a>
                 </li>
                 <li>
-                    <a class="header-menu-link" href="#">Contacts</a>
+                    <a class="header-menu-link" href="">Contacts</a>
                 </li>
             </ul>
         </nav>
-        <address>
+        <address class="address-link">
             <ul>
                 <li><a class="address-menu-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li><a class="address-menu-link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
@@ -44,7 +44,7 @@
             <button class="hero-button" type="button">Order Service</button>
         </section>
         <section>
-            <h2 class="advantage">advantage</h2>
+
             <ul>
                 <li>
                     <h3 class="benefit-title">Strategy</h3>
@@ -135,7 +135,7 @@
 
     </main>
     <footer class="footer">
-        <a class="footer-logo" href="./index.html"><span class="footer-accent">Web</span>Studio</a>
+        <a class="footer-logo" href="./index.html">Web<span class="footer-accent">Studio</span></a>
         <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing &
             growth solutions.</p>
     </footer>
