--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <button class="hero-button" type="button">Order Service</button>
         </section>
         <section>
-
+            <h2 class="advantage">advantage</h2>
             <ul>
                 <li>
                     <h3 class="benefit-title">Strategy</h3>
@@ -126,7 +126,7 @@
                     <p class="portfolio-text">Design</p>
                 </li>
                 <li>
-                    <img src="/images/onlinecourses.jpg" alt="Online Courses" width="360" height="300">
+                    <img src="./images/onlinecourses.jpg" alt="Online Courses" width="360" height="300">
                     <h3 class="portfolio-subtext">Online Courses</h3>
                     <p class="portfolio-text">Marketing</p>
                 </li>
